# emulator6502

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  run.sh
buildenv/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/Emulator6502/: Cpu.cpp  Cpu.h  DescriptorTable.cpp  DescriptorTable.h  Emulator.cpp  Emulator.h  Instruction.cpp  Instruction.h  Interpreter.h  Opcodes.h  Types.h  common.h  cpu.cpp  cpu.h  emulator.h  opcode.h
src/Emulator6502/FileLoader/: FileLoader.cpp  FileLoader.h
tests/: tests.cpp
